Fixes SVG image handling on Windows